# aiidalab-empa-nanoribbons

./: .pre-commit-config.yaml  README.md  Untitled.ipynb  compare.ipynb  export_structure.ipynb  metadata.json  pdos.ipynb  search.ipynb  setup.cfg  setup.json  setup_sssp_modified.sh  show.ipynb  start.py  submit.ipynb  submit_ks.ipynb  view_geometry.ipynb
nanoribbon/editors/: __init__.py  replicate.py
nanoribbon/viewers/: __init__.py  cdxml2gnr.py  igor.py  pdos_computed.py  search.py  show_computed.py  smiles2GNR.py  smiles2gnr.py  structures.py  utils.py
nanoribbon/workchains/: __init__.py  aux_script_strings.py  ks_orbitals.py  nanoribbonwork.py
