[aiidalab]
title = Empa nanotech@surfaces Laboratory - Graphene nanoribbons

[metadata]
name = nanoribbons
version = 1.5.0
author = nanotech@surfaces laboratory, Empa
description = Tools for graphene nanoribbons, developed at the nanotech@surfaces laboratory, Empa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-nanoribbons
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-nanoribbons/develop/miscellaneous/logos/empa.png
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-nanoribbons/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiida-core~=1.0
    aiida-quantumespresso~=3.5
    aiida-nanotech-empa~=0.6
    aiidalab-widgets-base~=1.0
    ase
    
