[metadata]
name = nanoribbons
version = 1.5.1
description = Tools for graphene nanoribbons, developed at the nanotech@surfaces laboratory, Empa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-nanoribbons
author = nanotech@surfaces laboratory, Empa
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-nanoribbons/develop/miscellaneous/logos/empa.png
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-nanoribbons/issues

[options]
packages = find:
install_requires =
    aiida-core~=1.0
    aiida-nanotech-empa~=0.6
    aiida-quantumespresso~=3.5
    aiidalab-widgets-base~=1.0
    ase
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1118
    pre-commit==2.11.1

[aiidalab]
title = Empa nanotech@surfaces Laboratory - Graphene nanoribbons

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v1.5.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version: {old_version} → {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
